--- a/H_F_signup.html
+++ b/H_F_signup.html
@@ -51,17 +51,11 @@
 			          color: white;
 
 		}
-      /*  .center {
-                  margin: 100px;
-                  width: 80%;
-                  border: 3px solid #ffffff;
-                  padding: 10px;
-                  text-align: center;
-                       }
+      
      </style>
 	
 </head>
-<body background="/home/ramya/Pictures/gradient-cubes.jpg">
+<body background="https://hdqwalls.com/wallpapers/gradient-texture-cubes.jpg">
 	      <header>
 	           <p><stong>HONO</stong></p>
           </header> 
