BPL web page with Images

--- a/9th July/BPL.html
+++ b/9th July/BPL.html
@@ -3,13 +3,28 @@
 
 <head>
 	<title>BPL</title>
+	
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	
 	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
 		integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+	
 	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
 		integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+	
 	<link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
+	
+	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
+	 integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+	
+	 <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' 
+	integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+	
+	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' 
+	integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+	
 	<link rel="stylesheet" type="text/css" href="BPL.css">
+
 </head>
 
 <body>
@@ -19,7 +34,7 @@
 
 			<div class="logo">
 
-				<img src="/home/ramya/Downloads/logo.png" alt="logo">
+				<img src="IMG/logo.png" alt="logo">
 
 			</div>
 
@@ -66,7 +81,7 @@
 			</div>
 
 			<div class="image">
-				<img src="/home/ramya/Downloads/sliderImg.png" alt="slider">
+				<img src="IMG/sliderImg.png" alt="slider">
 			</div>
 
 		</div>
@@ -86,22 +101,22 @@
 
 			<div class="cards">
 
-				<img src="/home/ramya/Downloads/tv.png">
+				<img src="IMG/tv.png">
 
 			</div>
 			<div class="cards">
 
-				<img src="/home/ramya/Downloads/machine.png">
+				<img src="IMG/machine.png">
 
 			</div>
 			<div class="cards">
 
-				<img src="/home/ramya/Downloads/frize.png">
+				<img src="IMG/frize.png">
 
 			</div>
 			<div class="cards">
 
-				<img src="/home/ramya/Downloads/ac.png">
+				<img src="IMG/ac.png">
 
 			</div>
 		</div>
@@ -123,7 +138,7 @@
 		</div>
 		<div class="imagebox">
 
-			<div class="fridge"><img src="/home/ramya/Downloads/frizeView.jpg"></div>
+			<div class="fridge"><img src="IMG/frizeView.jpg"></div>
 			<div class="fridge_des">
 				<h3>BPL 564L Frost Free</h3>
 				<h2>Side-By-Side Refrigirator</h2><br><br>
@@ -155,7 +170,7 @@
 		</div>
 		
 		<div class="pic">
-			<img src="/home/ramya/Downloads/shopping.png">
+			<img src="IMG/shopping.png">
 		</div>
 		
 		<div class="corporate">
@@ -166,9 +181,30 @@
 	</div>
 
 	<div class="footer1">
-	 
-		
 
+	   <div class="text">
+		<h3>LET'S STAY IN TOUCH</h3>
+		<h5>Get updates on sales special and more</h5>
+	   </div>
+
+	   <div class="search">
+			<form action="/action_page.php">
+			<input type="text" name="FirstName" placeholder="Email-Address"><br>
+			</form>
+		</div>
+
+		<div>
+			<h3>GET SOCIAL</h3>
+			<h5>We want to here from you!</h5>
+
+		</div>
+
+		<div>
+				<i class='fab fa-facebook' style='font-size:24px'></i>
+				<i class='fab fa-instagram' style='font-size:24px'></i>
+				<i class='fab fa-twitter' style='font-size:24px'></i>
+				<i class='fab fa-linkedin-in' style='font-size:24px'></i>
+		</div>
 		
 	</div>
 
